Minor changes to aid in IR generation.